--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ body, html {
 }
 
 body {
-  background-image: url("https://i.imgur.com/4SDWrgr.jpg");
+  background-image: url("https://images.unsplash.com/photo-1557682224-5b8590cd9ec5?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=715&q=80");
   background-size: cover;
   background-position: center center;
   position: relative;
