--- a/css/style.css
+++ b/css/style.css
@@ -136,8 +136,8 @@ section.join .line {
 
 .footer {
   padding: 40px;
-  background-color: #25272C;
-  background-image: linear-gradient(45deg, rgba(101, 128, 233, 0.66) 0%, #1E3FB6 100%);
+  background-color: #b01ea6;
+  background-image: url("https://i.imgur.com/MV97Xtc.jpg")
   line-height: 24px;
   font-size: 20px;
   color: #fff;
