--- a/css/style.css
+++ b/css/style.css
@@ -200,7 +200,7 @@ h3 {
 }
 .btn-pill.white {
   background: #fff;
-  color: #4360AE;
+  color: ##de0404;
 }
 
 a.links-suppressor, .links-suppressor a {
