--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,7 @@ body:before {
   left: 0;
   width: 100%;
   height: 550px;
-  background-image: linear-gradient(45deg, rgba(101, 128, 233, 0.73) 0%, #1E6DB6 100%);
+  background-image: linear-gradient(45deg, rgba(101, 128, 233, 0.73) 0%, #b61e62 100%);
 }
 
 .topmenu {
