--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ body:before {
 }
 
 .container {
-  background: #25272C;
+  background-image: linear-gradient(to right top, #051937, #004d7a, #008793, #00bf72, #a8eb12);
   min-height: 100%;
   padding: 0;
 }
