--- a/index.pug
+++ b/index.pug
@@ -3,32 +3,32 @@
                 nav.topmenu.d-flex.justify-content-center
                     a(href="#about") About
                     .line.align-self-center
-                    a(href="a cool discord bot") 
+                    a(href="a nitro server") 
                     .line.align-self-center
-                    a(href="https://discord.gg/mn9madS") Join
+                    a(href="https://discord.gg/yeKqNPW") Join
                 .server-info.d-flex.align-items-center.flex-column.text-center
-                    h1 Lustfulite Bot
-                    a.links-suppressor.join-btn.btn-pill.white(href="https://discordapp.com/api/oauth2/authorize?client_id=469176480048349206&scope=bot&permissions=8") Invite Bot
+                    h1 GiveAway Paradise 
+                    a.links-suppressor.join-btn.btn-pill.white(href="Earn Free Nitro") Free Nitro!
                     
             .inner.d-flex.flex-column
                 section#about.d-flex.justify-content-between.flex-lg-nowrap.flex-wrap
                     .image.image1(style="flex-grow: 1")
                     .text
-                        h2 About Lustfulite
+                        h2 About GiveAway Paradise
                         p
-                            b Lustfulite
-                            | &nbsp;is a simple Discord.js bot eqquiped with many commands 
+                            b GiveAway Paradise
+                            | &nbsp;is a simple Discord Built for 1 reason
                             br
                             br
-                            b Lustfulite has many unique and useful features available for use:
+                            b To make people happy what we offer
                             br
                         ul
                             li 
-                            li Moderation  (warn, kick, ban, mod-logs, etc.)
-                            li Currency and Leveling System
-                            li User Informational 
-                            li Image Manipulation
-                            li And many more useful commands!
+                            li Nitro Giveaways
+                            li An Great community 
+                            li Fun bots 
+                            li Voice chat
+                            li And many more useful and fun things!
                 section.discord-widget
                     iframe.d-flex(src="https://discordapp.com/widget?id=451459061280669700&theme=dark",
                         allowtransparency="true",
@@ -37,13 +37,13 @@
              
                 section.join.d-flex.justify-content-center
                     .line.align-self-center(style="flex-grow: 1")
-                    a.links-suppressor.btn-pill.white(href="https://discord.gg/mn9madS") Support Server
+                    a.links-suppressor.btn-pill.white(href="https://discord.gg/yeKqNPW") Our server
                     .line.align-self-center(style="flex-grow: 1")
                             
             .footer.d-flex.justify-content-between.flex-lg-nowrap.flex-wrap
                 .d-flex
                     .block.d-flex.flex-column.justify-content-between
-                        h3.d-flex Developers
-                        span B O O M.exe
+                        h3.d-flex 
+                        span
                    
                 p.align-self-end 
